--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,16 +109,7 @@ deploy:
     - cd dist
     - for i in `find -type f -printf '%P\n'` ; do NODE_PATH=ci-tools/node_modules upload-asset $i; done
     - cd ..
-    # remote ssh on demo VM and refresh containers from latest images
-    - chmod 600 ssh/frmdb.id_rsa
-    # stop old compose stack (run it against existing compose.yaml to make sure we don't leave dangling containers)
-    - ssh -i ssh/frmdb.id_rsa demo@formuladb.online "docker-compose down"
-    # copy new compose config
-    - scp -i ssh/frmdb.id_rsa docker-compose.yml demo@formuladb.online:/home/demo/docker-compose.yml
-    # get latest "latest" for be
-    - ssh -i ssh/frmdb.id_rsa demo@formuladb.online "FRMDB_RELEASE=${CI_COMMIT_TAG:-latest} docker-compose pull be lb"
-    # bring up new stack
-    - ssh -i ssh/frmdb.id_rsa demo@formuladb.online "FRMDB_RELEASE=${CI_COMMIT_TAG:-latest} docker-compose up -d db be lb"
+    - KUBECONFIG=k8s/demo-kube-config.conf skaffold deploy
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
