--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
         "compile:watch": "npm run compile -- -w",
         "bundle": "webpack",
         "bundle:watch": "webpack --watch --progress --mode development",
-        "docker:be": "docker build -t formuladb-be -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version} && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:latest",
-        "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
-        "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
+        "docker:be": "docker build -t formuladb-be -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:0.0.12 && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:latest",
+        "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:0.0.12",
+        "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:0.0.12",
         "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
         "serve": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'npm run docker:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
         "test": "node jasmine.js",
         "test:e2e": "protractor e2e/protractor.conf.js",
-        "e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js"
+        "e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js",
+        "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts"
     },
     "author": "",
     "license": "ISC",
@@ -55,6 +56,7 @@
         "ts-loader": "^6.0.1",
         "ts-node": "^8.2.0",
         "tsconfig-paths": "^3.8.0",
+        "ts-node-dev": "^1.0.0-pre.41",
         "typescript": "3.5.2",
         "webpack": "^4.33.0",
         "webpack-cli": "^3.3.2",
@@ -68,6 +70,7 @@
         "ag-grid-community": "^21.1.0",
         "ag-grid-enterprise": "^21.1.0",
         "body-parser": "~1.13.2",
+        "@google-cloud/translate": "^4.1.3",
         "chromedriver": "^76.0.0",
         "cluster-key-slot": "^1.0.12",
         "connect-ensure-login": "^0.1.1",
