--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,11 @@
 stages:
   - build
-  - test_mem
-  - test_postgres
-  - stress
   - bundle
   - deploy_cluster
   - build_and_deploy
+  - test_mem
+  - test_postgres
+  - stress
   - e2e_dev_env
   - deploy
   # - e2e_example_apps
@@ -24,40 +24,6 @@ build:
       - tsc-out/
       - dist-be/
       - dist-fe/
-
-test_mem:
-  stage: test_mem
-  script:
-    - npm test || true
-  cache:
-    key: ${CI_COMMIT_SHORT_SHA}
-    paths:
-      - node_modules/
-      - tsc-out/
-
-
-test_postgres:
-  stage: test_postgres
-  script:
-    - docker start postgres-for-unit-tests || docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres:11
-    - FRMDB_STORAGE=postgres npm test || true
-  cache:
-    key: ${CI_COMMIT_SHORT_SHA}
-    paths:
-      - node_modules/
-      - tsc-out/
-
-stress:
-  stage: stress
-  script:
-    - npm test -- core/src/frmdb_engine.stress.spec.ts
-    - docker start postgres-for-unit-tests || docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres:11
-    - FRMDB_STORAGE=postgres npm test -- core/src/frmdb_engine.stress.spec.ts
-  cache:
-    key: ${CI_COMMIT_SHORT_SHA}
-    paths:
-      - node_modules/
-      - tsc-out/
 
 bundle:
   stage: bundle
@@ -79,12 +45,44 @@ build_and_deploy:
   stage: build_and_deploy
   script:
     - KUBECONFIG=`k3d get-kubeconfig` skaffold run
+    - nc -z localhost 5432 || KUBECONFIG=`k3d get-kubeconfig` POD=`kubectl get pod -l app=my-app -o jsonpath='{.items[0].metadata.name}'` kubectl port-forward $POD 5432:5432 &
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
       - node_modules/
       - dist-be/
       - dist-fe/
+
+test_mem:
+  stage: test_mem
+  script:
+    - npm test || true
+  cache:
+    key: ${CI_COMMIT_SHORT_SHA}
+    paths:
+      - node_modules/
+      - tsc-out/
+
+test_postgres:
+  stage: test_postgres
+  script:
+    - FRMDB_STORAGE=postgres npm test || true
+  cache:
+    key: ${CI_COMMIT_SHORT_SHA}
+    paths:
+      - node_modules/
+      - tsc-out/
+
+stress:
+  stage: stress
+  script:
+    - npm test -- core/src/frmdb_engine.stress.spec.ts
+    - FRMDB_STORAGE=postgres npm test -- core/src/frmdb_engine.stress.spec.ts
+  cache:
+    key: ${CI_COMMIT_SHORT_SHA}
+    paths:
+      - node_modules/
+      - tsc-out/
 
 e2e_dev_env:
   stage: e2e_dev_env
@@ -142,4 +140,5 @@ cleanup:
     - docker system prune -af
 #    - killall node --quiet || true
     - find /home/gitlab-runner/cache/ -type f -mmin +60 -delete
+    - pkill kubectl -9
   when: always
