--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,7 +80,7 @@ test_postgres:
   script:
     - export KUBECONFIG=`k3d get-kubeconfig`
     - POD=`kubectl get pod -l service=db -o jsonpath='{.items[0].metadata.name}'`
-    - nc -z localhost 5432 || kubectl port-forward $POD 5432:5432 &
+    - nc -z localhost 5432 || setsid kubectl port-forward $POD 5432:5432 &
     - FRMDB_STORAGE=postgres npm test || true
     - pkill -9 kubectl || true # kill the tunnel to allow the job to finish
   cache:
@@ -97,7 +97,7 @@ stress:
     - npm test -- core/src/frmdb_engine.stress.spec.ts
     - export KUBECONFIG=`k3d get-kubeconfig`
     - POD=`kubectl get pod -l service=db -o jsonpath='{.items[0].metadata.name}'`
-    - nc -z localhost 5432 || kubectl port-forward $POD 5432:5432 &
+    - nc -z localhost 5432 || setsid kubectl port-forward $POD 5432:5432 &
     - FRMDB_STORAGE=postgres npm test -- core/src/frmdb_engine.stress.spec.ts
     - pkill -9 kubectl || true # kill the tunnel to allow the job to finish
   cache:
@@ -113,7 +113,7 @@ e2e_dev_env:
   script:
     - export KUBECONFIG=`k3d get-kubeconfig`
     - POD=`kubectl get pod -l service=lb -o jsonpath='{.items[0].metadata.name}'`
-    - nc -z localhost 8081 || kubectl port-forward $POD 8081:80 &
+    - nc -z localhost 8081 || setsid kubectl port-forward $POD 8081:80 &
     - TARGET=headless protractor --baseUrl='http://localhost:8081' e2e/protractor.conf.js
     - pkill -9 kubectl || true # kill the tunnel to allow the job to finish
   cache:
@@ -145,7 +145,7 @@ deploy:
     - export KUBECONFIG=k8s/demo-kube-config.conf
     - skaffold deploy
     - POD=`kubectl get pod -l service=db -o jsonpath='{.items[0].metadata.name}'`
-    - nc -z localhost 5433 || kubectl port-forward $POD 5433:5432 &
+    - nc -z localhost 5433 || setsid kubectl port-forward $POD 5433:5432 &
     - PGPORT=5433 npm run e2e:data
     - pkill -9 kubectl || true # kill any previous tunnels
   cache:
