--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,10 +112,11 @@ stress:
 
 e2e_dev_env:
   stage: e2e_dev_env
-  script:
+  before_script:
     - export KUBECONFIG=`k3d get-kubeconfig`
     - POD=`kubectl get pod -l service=lb -o jsonpath='{.items[0].metadata.name}'`
     - nc -z localhost 8081 || kubectl port-forward $POD 8081:80 &
+  script:
     - TARGET=headless protractor --baseUrl='http://localhost:8081' e2e/protractor.conf.js
   after_script:
     - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
