--- a/k8s/lb-config.yaml
+++ b/k8s/lb-config.yaml
@@ -6,7 +6,7 @@ data:
   nginx.conf: |
     server {
         listen         80;
-        server_name  formuladb.online;
+        server_name  formuladb.online www.formuladb.online formuladb.io www.formuladb.io;
         root         /usr/share/nginx/html;
         rewrite  ^/$  /index.html  last;
 
