--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "fetch-mock": "^7.3.6",
         "glob": "^7.1.4",
         "install": "^0.12.2",
+        "is-wsl": "^2.1.0",
         "jasmine": "^3.4.0",
         "jasmine-spec-reporter": "^4.2.1",
         "jsdom": "^15.1.0",
@@ -44,7 +45,7 @@
         "node-sass": "^4.12.0",
         "npm": "^6.9.0",
         "parallel-webpack": "^2.3.0",
-        "pretty": "^2.0.0",
+        "protractor": "^5.4.2",
         "raw-loader": "^3.0.0",
         "rimraf": "^2.6.3",
         "sass": "^1.20.1",
@@ -54,22 +55,20 @@
         "testem": "^2.16.0",
         "ts-loader": "^6.0.1",
         "ts-node": "^8.2.0",
-        "tsconfig-paths": "^3.8.0",
         "ts-node-dev": "^1.0.0-pre.41",
+        "tsconfig-paths": "^3.8.0",
         "typescript": "3.5.2",
         "webpack": "^4.33.0",
         "webpack-cli": "^3.3.2",
         "webpack-node-externals": "^1.7.2",
-        "whatwg-fetch": "^3.0.0",
-        "is-wsl": "^2.1.0",
-        "protractor": "^5.4.2"
+        "whatwg-fetch": "^3.0.0"
     },
     "dependencies": {
+        "@google-cloud/translate": "^4.1.3",
         "acorn": "^5.4.1",
         "ag-grid-community": "^21.1.0",
         "ag-grid-enterprise": "^21.1.0",
         "body-parser": "~1.13.2",
-        "@google-cloud/translate": "^4.1.3",
         "chromedriver": "^76.0.0",
         "cluster-key-slot": "^1.0.12",
         "connect-ensure-login": "^0.1.1",
@@ -86,6 +85,7 @@
         "formulajs": "git+https://github.com/acristu/formula.js.git",
         "fuse.js": "^3.3.0",
         "http-proxy-middleware": "^0.19.1",
+        "js-beautify": "^1.10.2",
         "js-yaml": "^3.13.1",
         "jsep": "git+https://github.com/acristu/jsep.git",
         "lodash": "^4.17.11",
