--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -25,6 +25,7 @@ spec:
         volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: pg-persistence
+          subPath: postgres
       restartPolicy: Always
       volumes:
       - name: pg-persistence
