jobs still stuck if failing due to background jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,12 +80,13 @@ test_mem:
 
 test_postgres:
   stage: test_postgres
+  before_script:
+    - trap 'kill $(jobs -p)' EXIT
   script:
     - export KUBECONFIG=`k3d get-kubeconfig`
     - POD=`kubectl get pod -l service=db -o jsonpath='{.items[0].metadata.name}'`
     - nc -z localhost 5432 || kubectl port-forward $POD 5432:5432 &
     - FRMDB_STORAGE=postgres npm test || true
-    - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -96,13 +97,14 @@ test_postgres:
 
 stress:
   stage: stress
+  before_script:
+    - trap 'kill $(jobs -p) 2> /dev/null || true' EXIT
   script:
     - npm test -- core/src/frmdb_engine.stress.spec.ts
     - export KUBECONFIG=`k3d get-kubeconfig`
     - POD=`kubectl get pod -l service=db -o jsonpath='{.items[0].metadata.name}'`
     - nc -z localhost 5432 || kubectl port-forward $POD 5432:5432 &
     - FRMDB_STORAGE=postgres npm test -- core/src/frmdb_engine.stress.spec.ts
-    - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -113,12 +115,13 @@ stress:
 
 e2e_dev_env:
   stage: e2e_dev_env
+  before_script:
+    - trap 'kill $(jobs -p) 2> /dev/null || true' EXIT
   script:
     - export KUBECONFIG=`k3d get-kubeconfig`
     - POD=`kubectl get pod -l service=lb -o jsonpath='{.items[0].metadata.name}'`
     - nc -z localhost 8081 || kubectl port-forward $POD 8081:80 &
     - TARGET=headless protractor --baseUrl='http://localhost:8081' e2e/protractor.conf.js
-    - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -155,13 +158,14 @@ publish_static_assets:
 
 deploy_demo:
   stage: deploy_demo
+  before_script:
+    - trap 'kill $(jobs -p) 2> /dev/null || true' EXIT
   script:
     - export KUBECONFIG=k8s/demo-kube-config.conf
     - skaffold run
     - POD=`kubectl get pod -l service=db -o jsonpath='{.items[0].metadata.name}'`
     - nc -z localhost 5433 || kubectl port-forward $POD 5433:5432 &
     - PGPORT=5433 npm run e2e:data
-    - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -188,13 +192,14 @@ e2e_demo_env:
 
 deploy_production:
   stage: deploy_production
+  before_script:
+    - trap 'kill $(jobs -p) 2> /dev/null || true' EXIT
   script:
     - export KUBECONFIG=k8s/production-kube-config.conf
     - skaffold run
     - POD=`kubectl get pod -l service=db -o jsonpath='{.items[0].metadata.name}'`
     - nc -z localhost 5433 || kubectl port-forward $POD 5433:5432 &
     - PGPORT=5433 npm run e2e:data
-    - /bin/bash -c '/usr/bin/killall -q kubectl; exit 0'
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
