--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "license": "ISC",
     "devDependencies": {
         "@tbranyen/jsdom": "^13.0.0",
+        "@types/d3": "^5.7.2",
         "@types/jasmine": "^3.3.12",
         "@types/jquery": "^3.3.29",
         "@types/js-yaml": "^3.12.1",
@@ -75,6 +76,7 @@
         "cookie-parser": "~1.3.5",
         "cross-env": "^5.2.0",
         "csv": "^5.1.1",
+        "d3": "^5.11.0",
         "debug": "^4.1.1",
         "detect-node": "^2.0.4",
         "dompurify": "^1.0.11",
