--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -16,6 +16,12 @@ spec:
   - hosts:
     - www.formuladb.io
     secretName: formuladb-online
+  - hosts:
+    - staging.formuladb.io
+    secretName: formuladb-online
+  - hosts:
+    - demo.formuladb.io
+    secretName: formuladb-online
   rules:
   - host: formuladb.online
     http:
@@ -39,6 +45,20 @@ spec:
           serviceName: lb
           servicePort: 80
   - host: www.formuladb.io
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: lb
+          servicePort: 80
+  - host: staging.formuladb.io
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: lb
+          servicePort: 80
+  - host: demo.formuladb.io
     http:
       paths:
       - path: /
