#171 started centralizing all metadata processing in metadata_store

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
         {
             "name": "jasmine",
             "type": "node",
+            "useWSL": "true",
             "localRoot": "${workspaceFolder}",
             "remoteRoot": "/d/code/metawiz/febe",
             "runtimeArgs": [
