--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,6 @@
         {
             "name": "jasmine",
             "type": "node",
-            "useWSL": "true",
-            "localRoot": "${workspaceFolder}",
-            "remoteRoot": "/d/code/metawiz/febe",
             "runtimeArgs": [
                 "--trace-warnings",
                 "--debug-brk",
@@ -21,7 +18,7 @@
             "cwd": "${workspaceRoot}",
             "program": "${workspaceFolder}/jasmine.js",
             "args": [
-                "'${relativeFile}'"
+                "${relativeFile}"
             ],
             "sourceMaps": true,
             "outFiles": [
@@ -31,8 +28,6 @@
         {
             "name": "jasmine postgres",
             "type": "node",
-            "localRoot": "${workspaceFolder}",
-            "remoteRoot": "/d/code/metawiz/febe",
             "runtimeArgs": [
                 "--trace-warnings",
                 "--debug-brk",
@@ -49,7 +44,7 @@
             "cwd": "${workspaceRoot}",
             "program": "${workspaceFolder}/jasmine.js",
             "args": [
-                "'${relativeFile}'"
+                "${relativeFile}"
             ],
             "sourceMaps": true,
             "outFiles": [
