--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
         "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
         "dev:watch": "while ! k3d get-kubeconfig 2>/dev/null; do sleep 1; done; KUBECONFIG=`k3d get-kubeconfig` skaffold dev -p dev --port-forward=true",
+        "sass:watch": "sass --watch vvvebjs vvvebjs/scss/editor.scss:vvvebjs/css/editor.css",
         "serve": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'bash serve.sh' ';' select-layout tiled ';' split-window -h 'npm run dev:watch' ';' select-layout tiled",
         "test": "node jasmine.js",
         "test:e2e": "protractor e2e/protractor.conf.js",
